--- a/app/src/main/res/layout/new_challan_row_layout.xml
+++ b/app/src/main/res/layout/new_challan_row_layout.xml
@@ -16,6 +16,7 @@
             android:layout_width="100dp"
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
+            android:layout_margin="@dimen/dp8"
             android:gravity="center"
             android:background="@drawable/black_rect_border"
             android:text="0"
@@ -33,6 +34,7 @@
             android:background="@drawable/black_rect_border"
             android:text="0"
             android:textColor="@color/black"
+            android:layout_margin="@dimen/dp8"
             android:fontFamily="@font/opensans_regular"
             android:textSize="@dimen/sp14"
             />
@@ -41,6 +43,7 @@
             android:layout_width="100dp"
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
+            android:layout_margin="@dimen/dp8"
             android:gravity="center"
             android:background="@drawable/black_rect_border"
             android:text="0"
@@ -55,6 +58,7 @@
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
             android:gravity="center"
+            android:layout_margin="@dimen/dp8"
             android:background="@drawable/black_rect_border"
             android:text="0"
             android:textColor="@color/black"
@@ -67,6 +71,7 @@
             android:layout_width="100dp"
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
+            android:layout_margin="@dimen/dp8"
             android:gravity="center"
             android:background="@drawable/black_rect_border"
             android:text="0"
@@ -84,6 +89,7 @@
             android:background="@drawable/black_rect_border"
             android:text="0"
             android:textColor="@color/black"
+            android:layout_margin="@dimen/dp8"
             android:fontFamily="@font/opensans_regular"
             android:textSize="@dimen/sp14"
             />
@@ -93,6 +99,7 @@
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
             android:gravity="center"
+            android:layout_margin="@dimen/dp8"
             android:background="@drawable/black_rect_border"
             android:text="0"
             android:textColor="@color/black"
@@ -103,6 +110,7 @@
             android:id="@+id/ncrl_admin"
             android:layout_width="100dp"
             android:layout_height="@dimen/dp40"
+            android:layout_margin="@dimen/dp8"
             android:padding="@dimen/dp4"
             android:gravity="center"
             android:background="@drawable/black_rect_border"
@@ -121,6 +129,7 @@
             android:text="0"
             android:textColor="@color/black"
             android:fontFamily="@font/opensans_regular"
+            android:layout_margin="@dimen/dp8"
             android:textSize="@dimen/sp14"
             />
         <TextView
@@ -128,6 +137,7 @@
             android:layout_width="100dp"
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
+            android:layout_margin="@dimen/dp8"
             android:gravity="center"
             android:background="@drawable/black_rect_border"
             android:text="0"
@@ -139,6 +149,7 @@
             android:id="@+id/ncrl_cess"
             android:layout_width="100dp"
             android:layout_height="@dimen/dp40"
+            android:layout_margin="@dimen/dp8"
             android:padding="@dimen/dp4"
             android:gravity="center"
             android:background="@drawable/black_rect_border"
@@ -149,6 +160,7 @@
             />
         <TextView
             android:id="@+id/ncrl_misc"
+            android:layout_margin="@dimen/dp8"
             android:layout_width="100dp"
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
@@ -162,6 +174,7 @@
         <TextView
             android:id="@+id/ncrl_total"
             android:layout_width="100dp"
+            android:layout_margin="@dimen/dp8"
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
             android:gravity="center"
@@ -177,6 +190,7 @@
             android:layout_height="@dimen/dp40"
             android:padding="@dimen/dp4"
             android:gravity="center"
+            android:layout_margin="@dimen/dp8"
             android:background="@drawable/black_rect_border"
             android:text="0"
             android:textColor="@color/black"
